--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -48,6 +48,8 @@
   <div id="sidebar">
     <h2>My blog</h2>
     <p>This is my blog.</p>
+      {% block sidebar %}
+      {% endblock sidebar %}
   </div>
 </body>
 </html>
