--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -2,14 +2,19 @@
 
 {% block title %}My Blog{% endblock %}
 
-{% block content %}
+{% block sidebar %}
+  <h4>
+    <a href="{% url 'blog:new_post' %}">Add a new Post</a>
+  </h4>
+{% endblock sidebar %}
 
+{% block content %}
 
   {% if tag %}
     <h2>Posts tagged with "{{ tag.name }}"</h2>
   {% endif %}
 
-  {% for post in posts %}
+ {% for post in posts %}
   <div class="card mb-3">
 
     <h2 class="card-header pl-3">
