--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -4,7 +4,10 @@
 
 {% block sidebar %}
   <h4>
-    <a href="{% url 'blog:edit_post' post.id %}">Edit Post</a>
+    <a href="{% url 'blog:edit_post' post.slug %}">Edit Post</a>
+  </h4>
+  <h4>
+    <a href="{% url 'blog:delete_post' post.slug %}">Delete Post</a>
   </h4>
 {% endblock sidebar %}
 
@@ -25,7 +28,7 @@
   </p>
 
   <p>
-    <a href="{% url 'blog:post_share' post.id %}">
+    <a href="{% url 'blog:post_share' post.slug %}">
       Share this post
     </a>
   </p>
@@ -56,6 +59,7 @@
   {% empty %}
     <p>There are no comments yet.</p>
   {% endfor %}
+{% if user.is_authenticated %}
   {% if new_comment %}
     <h3>Your comment has been added.</h3>
   {% else %}
@@ -66,4 +70,5 @@
       <p><input type="submit" value="Add comment"></p>
     </form>
   {% endif %}
+{% endif %}
 {% endblock %}
