--- a/blog/templates/blog/post/edit_post.html
+++ b/blog/templates/blog/post/edit_post.html
@@ -5,12 +5,10 @@
 {% block content %}
     <h4>Edit Post:</h4>
 
-     <form method="post" action="{% url 'blog:edit_post' post.id %}" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-           <button name="submit" class="btn btn-primary">Save changes</button>
-        {% endbuttons %}
-    </form>
+     <form method="post">
+         {% csrf_token %}
+         {{ form.as_p }}
+         <input type="submit" class="btn btn-primary" value="Save Changes">
+     </form>
 
 {% endblock content %}
