--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <a class="navbar-brand" href="{% url 'blog:post_list' %}">
         My Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
