--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -19,7 +19,7 @@
   </h2>
 
   <div class="card pl-3 pt-2">
-  {{ post.body|linebreaks }}
+  {{ post.body|safe|linebreaks }}
   </div>
 
   <div class="card-footer text-muted pb-0">
