--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -6,6 +6,20 @@
   <h4>
     <a href="{% url 'blog:new_post' %}">Add a new Post</a>
   </h4>
+
+   <p class="tags">
+      <h5>Tags:</h5>
+   {% for post in posts %}
+      {% for tag in post.tags.all %}
+      <ul>
+        <li><a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+          {{ tag.name }}
+        </a></li>
+      </ul>
+      {% endfor %}
+   </p>
+   {% endfor %}
+
 {% endblock sidebar %}
 
 {% block content %}
@@ -24,7 +38,7 @@
     </h2>
     <div class="card pl-3">
       <p>
-      {{ post.body|truncatewords:30|linebreaks }}
+      {{ post.body|safe|truncatewords:30|linebreaks }}
       </p>
     </div>
 
