--- a/blog/templates/blog/post/new_post.html
+++ b/blog/templates/blog/post/new_post.html
@@ -8,6 +8,7 @@
 
     <form method="post" action="{% url 'blog:new_post' %}" class="form">
         {% csrf_token %}
+        {{ form.media }}
         {% bootstrap_form form %}
         {% buttons %}
            <button name="submit" class="btn btn-primary">Add Post</button>
