--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load taggit_templatetags2_tags %}
 
 {% block title %}My Blog{% endblock %}
 
@@ -9,16 +10,16 @@
 
    <p class="tags">
       <h5>Tags:</h5>
-   {% for post in posts %}
-      {% for tag in post.tags.all %}
-      <ul>
-        <li><a href="{% url 'blog:post_list_by_tag' tag.slug %}">
-          {{ tag.name }}
-        </a></li>
-      </ul>
-      {% endfor %}
+    {% get_taglist as tags for 'blog.Post' %}
+
+    {% for tag in tags %}
+        <ul>
+           <li><a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+               {{ tag.name }}</a></li>
+        </ul>
+    {% endfor %}
    </p>
-   {% endfor %}
+
 
 {% endblock sidebar %}
 
@@ -51,7 +52,7 @@
         <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
           {{ tag.name }}
         </a>
-        {% if not forloop.last %}, {% endif %}
+        {% if not forloop.last %}|{% endif %}
       {% endfor %}
     </p>
     </div>
